--- a/CuidooApp/Storyboards/Base.lproj/Auth.storyboard
+++ b/CuidooApp/Storyboards/Base.lproj/Auth.storyboard
@@ -19,14 +19,14 @@
                                 <rect key="frame" x="19" y="42" width="375" height="812"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="4hp-ju-sK9">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                                    </imageView>
                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tNM-Uh-aVg">
                                         <rect key="frame" x="30" y="32" width="315" height="370"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dZ3-wv-mMm">
                                                 <rect key="frame" x="122.5" y="15" width="70" height="70"/>
+                                                <connections>
+                                                    <action selector="profileImage:" destination="LqW-Na-hr0" eventType="touchUpInside" id="VUO-pM-u9K"/>
+                                                </connections>
                                             </button>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile pic" translatesAutoresizingMaskIntoConstraints="NO" id="5rc-yV-SUB">
                                                 <rect key="frame" x="122.5" y="15" width="70" height="70"/>
@@ -62,6 +62,7 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                                 <connections>
+                                                    <action selector="register:" destination="LqW-Na-hr0" eventType="touchUpInside" id="BQe-Iq-PJE"/>
                                                     <segue destination="qQB-St-NMw" kind="show" id="BOc-sI-Uw4"/>
                                                 </connections>
                                             </button>
@@ -85,6 +86,9 @@
                                                                 </constraints>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                 <textInputTraits key="textInputTraits" autocapitalizationType="words" keyboardAppearance="alert" textContentType="name"/>
+                                                                <connections>
+                                                                    <outlet property="delegate" destination="LqW-Na-hr0" id="qBE-45-emD"/>
+                                                                </connections>
                                                             </textField>
                                                             <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nFT-ZV-gu6">
                                                                 <rect key="frame" x="0.0" y="35" width="252" height="1"/>
@@ -123,6 +127,9 @@
                                                                 </constraints>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress" keyboardAppearance="alert" textContentType="email"/>
+                                                                <connections>
+                                                                    <outlet property="delegate" destination="LqW-Na-hr0" id="KhT-mw-W3i"/>
+                                                                </connections>
                                                             </textField>
                                                             <view tag="3" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wwI-zF-ieX">
                                                                 <rect key="frame" x="0.0" y="35" width="252" height="1"/>
@@ -160,6 +167,9 @@
                                                                 </constraints>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                 <textInputTraits key="textInputTraits" keyboardAppearance="alert" secureTextEntry="YES" textContentType="new-password"/>
+                                                                <connections>
+                                                                    <outlet property="delegate" destination="LqW-Na-hr0" id="4zN-40-oMw"/>
+                                                                </connections>
                                                             </textField>
                                                             <view tag="4" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VPu-iV-tsb">
                                                                 <rect key="frame" x="0.0" y="35" width="252" height="1"/>
@@ -228,6 +238,9 @@
                                                                 </constraints>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress" keyboardAppearance="alert" textContentType="email"/>
+                                                                <connections>
+                                                                    <outlet property="delegate" destination="LqW-Na-hr0" id="JlU-bs-f0v"/>
+                                                                </connections>
                                                             </textField>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4gH-Sm-JUW">
                                                                 <rect key="frame" x="0.0" y="45" width="252" height="1"/>
@@ -266,6 +279,9 @@
                                                                 </constraints>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                 <textInputTraits key="textInputTraits" keyboardAppearance="alert" secureTextEntry="YES" textContentType="password"/>
+                                                                <connections>
+                                                                    <outlet property="delegate" destination="LqW-Na-hr0" id="Rek-ce-nzi"/>
+                                                                </connections>
                                                             </textField>
                                                             <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GJk-2n-gAR">
                                                                 <rect key="frame" x="0.0" y="45" width="252" height="1"/>
@@ -295,7 +311,7 @@
                                                     <constraint firstAttribute="height" constant="40" id="s9D-aU-fK4"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
-                                                <state key="normal" title="Sign In" backgroundImage="button">
+                                                <state key="normal" title="Entrar" backgroundImage="button">
                                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 </state>
                                                 <userDefinedRuntimeAttributes>
@@ -303,6 +319,10 @@
                                                         <real key="value" value="20"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="login:" destination="LqW-Na-hr0" eventType="touchUpInside" id="M8Q-JC-bSh"/>
+                                                    <segue destination="qQB-St-NMw" kind="show" id="lkf-Ck-M2o"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -321,35 +341,31 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </view>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bIG-ra-gxY">
-                                        <rect key="frame" x="97.5" y="772" width="180" height="30"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bIG-ra-gxY">
+                                        <rect key="frame" x="97" y="434" width="180" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="TN8-JF-m0t"/>
                                             <constraint firstAttribute="width" constant="180" id="V93-ZB-znL"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="18"/>
                                         <state key="normal" title="Login">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="titleColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
-                                            <segue destination="qQB-St-NMw" kind="show" id="LBZ-77-ul3"/>
+                                            <action selector="switchViews:" destination="LqW-Na-hr0" eventType="touchUpInside" id="gWK-Hs-lUa"/>
                                         </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="skQ-Z1-0kg" firstAttribute="bottom" secondItem="4hp-ju-sK9" secondAttribute="bottom" id="0Cg-ph-UhM"/>
                                     <constraint firstItem="skQ-Z1-0kg" firstAttribute="bottom" secondItem="bIG-ra-gxY" secondAttribute="bottom" constant="10" id="1Y8-AV-bg2"/>
-                                    <constraint firstItem="skQ-Z1-0kg" firstAttribute="trailing" secondItem="4hp-ju-sK9" secondAttribute="trailing" id="3zC-xX-EaN"/>
                                     <constraint firstItem="KJ3-dh-a8S" firstAttribute="leading" secondItem="skQ-Z1-0kg" secondAttribute="leading" constant="30" id="FDk-M6-IF6"/>
                                     <constraint firstItem="skQ-Z1-0kg" firstAttribute="trailing" secondItem="tNM-Uh-aVg" secondAttribute="trailing" constant="30" id="GXy-Mm-yIT"/>
                                     <constraint firstItem="tNM-Uh-aVg" firstAttribute="leading" secondItem="skQ-Z1-0kg" secondAttribute="leading" constant="30" id="LFE-aO-ge6"/>
                                     <constraint firstItem="KJ3-dh-a8S" firstAttribute="top" secondItem="skQ-Z1-0kg" secondAttribute="top" constant="-500" id="UTP-gI-sNe"/>
                                     <constraint firstItem="bIG-ra-gxY" firstAttribute="centerX" secondItem="skQ-Z1-0kg" secondAttribute="centerX" id="hBv-FF-Pgo"/>
                                     <constraint firstItem="tNM-Uh-aVg" firstAttribute="top" secondItem="skQ-Z1-0kg" secondAttribute="top" constant="30" id="p4P-Ks-lhe"/>
-                                    <constraint firstItem="4hp-ju-sK9" firstAttribute="leading" secondItem="skQ-Z1-0kg" secondAttribute="leading" id="uWy-9j-qhI"/>
                                     <constraint firstItem="skQ-Z1-0kg" firstAttribute="trailing" secondItem="KJ3-dh-a8S" secondAttribute="trailing" constant="30" id="yLc-yb-9LD"/>
-                                    <constraint firstItem="4hp-ju-sK9" firstAttribute="top" secondItem="A4E-1t-0qf" secondAttribute="top" id="yz9-Kh-0O0"/>
                                 </constraints>
                                 <viewLayoutGuide key="safeArea" id="skQ-Z1-0kg"/>
                             </view>
@@ -358,15 +374,20 @@
                         <viewLayoutGuide key="safeArea" id="qgS-5O-Sfq"/>
                     </view>
                     <connections>
-                        <outlet property="registerEmailTextField" destination="LRk-iY-FeT" id="NMF-Tl-h86"/>
+                        <outlet property="loginEmailTextField" destination="frs-TG-xYZ" id="lGa-7u-3p3"/>
+                        <outlet property="loginPasswordTextField" destination="6qW-Iq-tkn" id="WB2-eR-FFl"/>
+                        <outlet property="loginViewTopConstraint" destination="UTP-gI-sNe" id="YiF-eJ-Vqs"/>
+                        <outlet property="registerEmailTextField" destination="LRk-iY-FeT" id="8dU-4F-qRj"/>
                         <outlet property="registerImageView" destination="5rc-yV-SUB" id="Ro1-8E-c9u"/>
-                        <outlet property="registerNameTextField" destination="JDT-Uq-1sP" id="oJ0-RF-eqa"/>
-                        <outlet property="registerPasswordTextField" destination="6kg-9c-gb6" id="hSH-ts-iSq"/>
+                        <outlet property="registerNameTextField" destination="JDT-Uq-1sP" id="UmJ-xM-arb"/>
+                        <outlet property="registerPasswordTextField" destination="6kg-9c-gb6" id="r0N-hC-UyN"/>
+                        <outlet property="registerViewTopConstraint" destination="p4P-Ks-lhe" id="q7U-mI-ky7"/>
+                        <outletCollection property="separatorViews" destination="nFT-ZV-gu6" collectionClass="NSMutableArray" id="pJC-XT-mVx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hKD-UN-Ha3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-508" y="935"/>
+            <point key="canvasLocation" x="-638" y="933"/>
         </scene>
         <!--Search-->
         <scene sceneID="Xqh-xJ-pkH">
@@ -376,11 +397,10 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Umb-te-D3g" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-538" y="1364"/>
+            <point key="canvasLocation" x="-638" y="1372"/>
         </scene>
     </scenes>
     <resources>
-        <image name="background" width="375" height="667"/>
         <image name="button" width="60" height="20"/>
         <image name="email" width="24" height="24"/>
         <image name="name" width="24" height="24"/>
@@ -388,6 +408,6 @@
         <image name="profile pic" width="100" height="100"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="LBZ-77-ul3"/>
+        <segue reference="lkf-Ck-M2o"/>
     </inferredMetricsTieBreakers>
 </document>
